--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>babel demo</title>
-<style>
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div id="root"></div>
@@ -13,6 +12,8 @@
 <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-<script src="script.js" type="text/babel"></script>
+<script src="script.js" type="text/babel">
+
+</script>
 </body>
 </html>
